--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,11 @@ a{text-decoration: none;color:#000;}
 
 .pokemons-list{display: flex;flex-wrap:wrap;}
 .pokemons-list li{width: 50%;cursor: pointer;}
+.pokemons-list li img{width: 100%;max-width: 100px;}
 
 .detail{}
 .detail h2{}
 .detail img{width: 100%;}
+
+.likes ul{display: flex;flex-wrap: wrap;}
+.likes ul li{width: 33.33334%;}
