--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,3 +15,4 @@ a{text-decoration: none;color:#000;}
 
 .pokemons-list{display: flex;flex-wrap:wrap;}
 .pokemons-list li{width: 50%;}
+.pokemons-list li img{width: 100%;max-width: 80px;}
