--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,7 @@ a{text-decoration: none;color:#000;}
 
 .pokemons-list{display: flex;flex-wrap:wrap;}
 .pokemons-list li{width: 50%;cursor: pointer;}
+.pokemons-list li img{width: 100%;max-width: 80px;} 
 
 .detail{}
 .detail h2{}
