--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,3 +141,17 @@ a{
     background-color: tomato;
     color:#fff;    
 }
+
+.types{
+    display: flex;
+    flex-wrap: wrap;
+}
+.types li{
+    padding:10px;
+    cursor: pointer;
+    font-size: 1.25em;
+    color:#333;
+}
+.types li.on{
+    color:tomato
+}
